<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PayTouch</string>
    <string name="title_actor_detail">Actor Detail</string>
    <string name="paytouch_logo">PayTouch</string>
    <string name="back_button">back button</string>
    <string name="filmography">Filmography</string>
    <string name="film_poster">film poster</string>
    <string name="order_by">Order By</string>
    <string name="filter">filter</string>
    <string name="order_by_name"><![CDATA[order by <b>name</b>]]></string>
    <string name="order_by_popularity"><![CDATA[order by <b>popularity</b>]]></string>
    <string name="search">Search</string>
    <string name="enter_name">write name</string>
    <string name="name_title">name</string>
    <string name="location_title">location</string>
    <string name="is_top_title">is top?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="popularity_title">popularity</string>
    <string name="no_actors_found">No actors found matching that criteria</string>
    <string name="enter_location">write location</string>
    <string name="all">all</string>
    <string name="reset">reset</string>

</resources>
