<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:background="@color/toolbar_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/paytouch"
        android:contentDescription="@string/paytouch_logo" />
        <ImageButton
            android:id="@+id/button_sort"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_orderby"
            android:contentDescription="@string/order_by" />
        <ImageButton
            android:id="@+id/button_filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_filter"
            android:contentDescription="@string/filter" />
    </LinearLayout>

</android.support.v7.widget.Toolbar>